# crowdin-strife

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  fly-dev.toml  fly.toml  output.json  package.json  wrangler.template.toml
.github/workflows/: fly-deploy-beta.yml  fly-deploy-main.yml  fly-dev-deploy.yml  list-up-intend-to-ship.yml  make-intend-to-ship.yml
.sqlx/: query-263fac8a5d6ad8adaa5939e4736e97b685cdbdf65fece70e316cc22d0f6acbb7.json  query-2690d12a9f88f083c165aec28bbf777fd4f1fbd7d9d56d8e6b714700744ae987.json  query-4730ba51d8732ec1a83b8e758170b32d643632277beaa54cb41e22426328b613.json  query-565105bcf56dc1c3a84c1722cb698a21f5613c9cb278aba352c5f1587d32053a.json  query-68c8a36f3337b874090c03c23efd2627c7f9741d80f8782e707e667bfaade05b.json  query-c895bc0144968a227e058932631e09bbd5589d6040771468eab4d2d77366d1dd.json  query-d9139e040be1936da02cc4dce092db746d0225ef822d208af6002d55590f6111.json
bot_any/: Cargo.toml  README.md
bot_any/bot_any_cal/: Cargo.toml  README.md
bot_any/bot_any_cal/src/: command.rs  command_argument.rs  command_group.rs  command_handler.rs  command_preflight.rs  command_sender.rs  command_spec.rs  context.rs  lib.rs
bot_any/bot_any_cal/src/command_spec/: mod.rs
bot_any/bot_any_cal_derive/: Cargo.toml
bot_any/bot_any_cal_derive/src/: lib.rs
bot_any/bot_any_env_cf_worker/: Cargo.toml
bot_any/bot_any_env_cf_worker/src/: lib.rs
bot_any/bot_any_garden_cf_worker/: Cargo.toml
bot_any/bot_any_platform_discord/: Cargo.toml
bot_any/bot_any_platform_discord/src/: lib.rs
bot_any/bot_any_platform_discord/src/api/: garden.rs  interaction.rs  mod.rs
bot_any/bot_any_platform_discord/src/bridge/: member.rs  message_write.rs  mod.rs  user.rs
bot_any/bot_any_platform_discord/src/cal/: command.rs  command_spec.rs  convert.rs  mod.rs
bot_any/bot_any_platform_discord/src/kal/: command.rs
bot_any/bot_any_platform_discord/src/sys/: error.rs  mod.rs  verify_key.rs
bot_any/bot_any_platform_discord/src/sys/commands/: delete_command.rs  list_commands.rs  mod.rs  update_command.rs
bot_any/bot_any_platform_discord/src/sys/types/: application_command.rs  embed.rs  interaction.rs  interaction_callback_message.rs  interaction_response.rs  member.rs  mod.rs  snowflake.rs  user.rs
bot_any/bot_any_platform_telegram/: Cargo.toml
bot_any/src/types/: command_sender.rs  env.rs  message.rs  mod.rs  user.rs
crates/app/: Cargo.toml
crates/app/src/: e2k_base.rs  lib.rs  main.rs  message.rs  msgdata.rs
crates/app/src/bina/: bedrock_compile.rs  dungeons_compile.rs  register_commands.rs
crates/app/src/commands/: bedrock_e2k2e.rs  dungeons_e2k2e.rs  java_e2k2e.rs  mod.rs  unknown.rs  version.rs
crates/app/src/file_reader/: mod.rs  non_wasm.rs
crates/app/src/lookup/message/: mod.rs
crates/crowdin_client/: Cargo.toml  README.md
crates/crowdin_client/src/: types.rs
crates/crowdin_client/src/auth/: mod.rs  refresh_token.rs
crates/crowdin_client/src/discussions/: load_topics.rs  mod.rs  types.rs
crates/engine/: Cargo.toml
crates/engine/prisma/: schema.prisma
crates/engine/src/: lib.rs  prisma.rs
crates/engine/src/api/: mod.rs
crates/engine/src/db/: mod.rs
crates/engine/src/db/impl/: mod.rs  prisma.rs  sqlx.rs
crates/engine/src/env/: layered.rs  mod.rs  predefined.rs  std.rs
crates/engine/src/language/: infer.rs  mod.rs
crates/kal-serenity/: Cargo.toml
crates/kal-serenity/src/: command.rs  command_spec.rs  lib.rs
crates/mcapi/src/launcher/: download_asset.rs  mod.rs
crates/prisma/: Cargo.toml
crates/query/: Cargo.toml
crates/query/src/: main.rs
crates/update-bedrock-asset/: Cargo.toml  README.md
crates/update-bedrock-asset/src/: main.rs
crates/update-dungeons-asset/: Cargo.toml  README.md
crates/update-dungeons-asset/src/: main.rs
crates/update-dungeons-asset/src/locres/: buf_ext.rs  file.rs  mod.rs  namespace.rs  version.rs
crates/update-java-asset/: Cargo.toml
crates/update-java-asset/src/: main.rs
crowdin_client/: Cargo.toml
crowdin_client/src/: lib.rs  types.rs
crowdin_client/src/auth/: refresh_token.rs
crowdin_client/src/discussions/: load_topics.rs
docs/: Collation.md  Setting-the-Development-Environment.md  UWP.md
mcapi/: Cargo.toml
mcapi/src/launcher/: download_asset.rs  download_game.rs  get_asset_bundle.rs  get_asset_index.rs  get_version_manifest.rs  mod.rs
reqores/: Cargo.toml  README.md
reqores/reqores_client_cf_worker/: Cargo.toml
reqores/reqores_client_cf_worker/src/: client_response.rs  lib.rs
reqores/reqores_client_surf/: Cargo.toml
reqores/reqores_client_surf/src/: client_response.rs  lib.rs
reqores/reqores_client_tide/: Cargo.toml
reqores/reqores_server_axum/: Cargo.toml
reqores/reqores_server_cf_worker/: Cargo.toml
reqores/reqores_server_cf_worker/src/: lib.rs  server_request.rs  server_response.rs
reqores/src/: client_request.rs  client_response.rs  http_method.rs  lib.rs  server_response.rs  status_code.rs
src/: e2k_base.rs  lib.rs  main.rs  setup.rs
src/commands/: bedrock_e2k2e.rs  dungeons_e2k2e.rs  e2k2e.rs  java_e2k2e.rs  mod.rs  test.rs  unknown.rs  version.rs  works_left.rs
src/file_reader/: wasm.rs
src/worker_app/: mod.rs
