[package]
name = "bot_any_cal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bot_any = { path = "../" }
bot_any_cal_derive = { path = "../bot_any_cal_derive" }

serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
thiserror = "*"
