[package]
name = "bot_any_platform_discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_json = "*"
serde_with = "*"
serde_repr = "*"

hex = "*"
ed25519-dalek = "*"

thiserror = "*"

reqores = { path = "../../reqores" }

bot_any = { path = "../" }

bot_any_cal = { path = "../bot_any_cal" }
