[package]
name = "bot_any_platform_discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = "1"
serde_with = { version = "2.0.0", default-features = false, features = ["alloc"] }
serde_repr = "*"

hex = "*"
ed25519-dalek = "*"

thiserror = "*"

reqores = "0.1"

bot_any = { path = "../" }

kal = "0.5"
