[package]
name = "app"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1", default-features = false, features = [] }
csv = "1.1.6"

reqores = "0.1.7"

kal = "0.5.0"
kal-serenity = { path = "../kal-serenity" }

mcapi = { path = "../mcapi" }
crowdin_client = { path = "../crowdin_client" }

engine = { path = "../engine" }

eyre = "0.6.8"
serenity = "0.11.5"

tokio = { version = "1.21.2", features = ["full"] }
reqores-client-surf = "0.1.3"
dotenvy = "0.15.5"
color-eyre = "0.6.2"
zip = "0.6.2"
pretty_env_logger = "0.4.0"
log = "0.4.17"
surf = "2.3.2"
java-properties = "1.4.1"
encoding = "0.2.33"

# [profile.release]
# opt-level = "s"
# lto = "fat"
# panic = "abort"
# strip = "debuginfo"
# codegen-units = 1
