[package]
name = "app"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1", default-features = false, features = [] }

reqores = "0.1.7"

kal = "0.5.0"
kal-serenity = { path = "../kal-serenity" }

mcapi = { path = "../mcapi" }
crowdin_client = { path = "../crowdin_client" }

engine = { path = "../engine" }

eyre = "0.6.8"
serenity = { version = "0.11.5", default-features = false, features = ["base64", "builder", "bytes", "cache", "chrono", "client", "dashmap", "flate2", "gateway", "http", "levenshtein", "model", "parking_lot", "rustls_backend", "static_assertions", "tokio", "typemap_rev", "utils", "uwl"] }

tokio = { version = "1.21.2", features = ["full"] }
reqores-client-surf = "0.1.3"
color-eyre = "0.6.2"
pretty_env_logger = "0.4.0"
log = "0.4.17"
surf = "2.3.2"

# [profile.release]
# opt-level = "s"
# lto = "fat"
# panic = "abort"
# strip = "debuginfo"
# codegen-units = 1
