[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
thiserror = "1.0.40"
serde = "1.0.159"
once_cell = "1.17.1"
regex = "1.7.3"
strum = "0.24.1"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
] }

[build-dependencies]
patch-crate = "0.1"
