[package]
name = "kal-serenity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kal = { version = "0.5.0", default-features = false }
serenity = { version = "0.11.5", default-features = false }
thiserror = "1.0.38"