[package]
name = "prisma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.prisma-client-rust-cli]
 git = "https://github.com/Brendonovich/prisma-client-rust"
 rev = "1f6474396363bab8c4cdd70c342055779b36909d"
 default-features = false
 features = ["mysql"]
 