[package]
name = "update-dungeons-asset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
color-eyre = "0.6.2"
tokio = "1.26.0"
engine = { path = "../engine" }

aes = "0.8.2"
repak = { git = "https://github.com/trumank/repak", tag = "v0.1.3" }
winnow = "0.3.5"
memmap2 = "0.5.10"
encoding_rs = "0.8.32"
