[package]
name = "update-java-asset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
color-eyre = "0.6.2"
tokio = "1.27.0"
engine = { path = "../engine" }

reqores-client-surf = "0.1.3"
serde = "1.0.159"
serde_json = "1.0.95"
mcapi = { path = "../mcapi" }
zip = "0.6.4"
